--- a/src/less/includes/color.less
+++ b/src/less/includes/color.less
@@ -35,3 +35,11 @@
 
 
 //== Metro ../../static/metro.jpg
+
+//== Soft
+
+@soft-blue: #7BA3A8;
+@soft-rice: #FEF3DE;
+@soft-light: #BEAD92;
+@soft-red: #F35A4A;
+@soft-brown: #5B4947;
