--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,2 +1,11 @@
 @import "color.less";
 @import "variables.less";
+
+@import "icon-names.less";
+@import "icons.less";
+
+@import "global.less";
+
+@import "aside.less";
+@import "content.less";
+@import "footer.less";
