--- a/src/jade/layout/layout.jade
+++ b/src/jade/layout/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title XD~
+    title Shawn的导航小站
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     block style
