--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -1,5 +1,5 @@
 //== Font
-@font-family: 'Open Sans', 'Helvetica Neue', Helvetica, 'Microsoft Yahei', 'Hiragino Sans GB', 'WenQuanYi Micro Hei', sans-serif;;
+@font-family: 'Georgia', 'Open Sans', 'Microsoft Yahei', sans-serif;
 //= Size
 @font-size-base: 16px;
 
@@ -7,6 +7,7 @@
 //== Color
 @text-color: @soft-rice;
 @bg-color: @soft-blue;
+
 
 //== Icon
 @fa-font-path:        "../static/fonts";
