--- a/src/less/components/aside.less
+++ b/src/less/components/aside.less
@@ -1,8 +1,15 @@
 aside {
   position: fixed;
-  right: 0;
+  left: 0;
   top: 0;
 
   width: 300px;
+  height: 100%;
+  padding: 10px;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+.set-li-icon(email, @fa-var-envelope, white);
+.set-li-icon(phone, @fa-var-phone, white);
+.set-li-icon(website, @fa-var-rss, white);
+.set-li-icon(degree, @fa-var-graduation-cap, white);
