--- a/src/less/includes/global.less
+++ b/src/less/includes/global.less
@@ -2,6 +2,10 @@
 * {
   margin: 0;
   padding: 0;
+
+          box-sizing: border-box;
+     -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 li {
