--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,12 +5,14 @@ block style
   link(rel='stylesheet', href='./css/index.css')
 
 block author
-  figure
+  figure.avatar
     +avatar
-  section
-    h3 Shawn Dai
-    h5 前端工程师
-  address
+  section.author-info
+    h2 Shawn Dai
+    h4 Front-End Engineer
+  address.contact
+    h3 Contact me!
+    hr
     +contact
 
 block content
