--- a/src/jade/layout/layout.jade
+++ b/src/jade/layout/layout.jade
@@ -6,7 +6,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     block style
   body
-    aside
+    aside.serif
       block author
     .container
       block content
