--- a/src/less/includes/global.less
+++ b/src/less/includes/global.less
@@ -14,11 +14,38 @@ li {
 
 body {
   font-size: @font-size-base;
-  font-family: @font-family;
+  font-family: @font-family-sans;
   background-color: @bg-color;
   color: @text-color;
 }
 
+h1 {
+  font-size: @font-size-h1;
+}
+
+h2 {
+  font-size: @font-size-h2;
+}
+
+h3 {
+  font-size: @font-size-h3;
+}
+
+h4 {
+  font-size: @font-size-h4;
+}
+
+h5 {
+  font-size: @font-size-h5;
+}
+
+h6 {
+  font-size: @font-size-h6;
+}
+
+address {
+  font-style: normal;
+}
 //== Common
 
 .fl {
@@ -31,4 +58,12 @@ body {
 
 .clearfix {
   clear: both;
+}
+
+.sans {
+  font-family: @font-family-sans;
+}
+
+.serif {
+  font-family: @font-family-serif;
 }
