--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -1,16 +1,26 @@
 //== Font
-@font-family: 'Georgia', 'Open Sans', 'Microsoft Yahei', sans-serif;
-//= Size
+@font-family-sans: 'Open Sans', Arial, "Helvetica Neue",'Microsoft Yahei', sans-serif;
+@font-family-serif: 'Georgia', Times, SimSun, STSong, serif;
+//= Font-Size
 @font-size-base: 16px;
-
+@font-size-h1: 2.25rem;
+@font-size-h2: 1.75rem;
+@font-size-h3: 1.5rem;
+@font-size-h4: 1.25rem;
+@font-size-h5: 1rem;
+@font-size-h6: 1rem;
 
 //== Color
 @text-color: @soft-rice;
 @bg-color: @soft-blue;
-
 
 //== Icon
 @fa-font-path:        "../static/fonts";
 @fa-font-size-base:   14px;
 @fa-css-prefix:       fa;
 @fa-version:          "4.3.0";
+
+
+//== Aside
+@aside-padding: 50px 15px 50px 15px;
+@aside-avatar-size: 100px;
