--- a/src/jade/mixins/mixin.jade
+++ b/src/jade/mixins/mixin.jade
@@ -3,7 +3,14 @@ mixin avatar
 
 mixin contact
   ul
-    li.email daixuan1996@gmail.com
     li.phone 18826234729
-    li.website http://daixuan.me
-    li.degree Software School in SYSU
+    li.email
+      a(href='mailto://daixuan1996@gmail.com') daixuan1996@gmail.com
+    li.github
+      a(href='https://github.com/daix6', target='_blank') https://github.com/daix6
+    li.weibo
+      a(href='http://weibo.com/1996DX', target='_blank') http://weibo.com/1996DX
+    li.website
+      a(href='http://daixuan.me', target='_blank') http://daixuan.me
+    li.degree
+      a(href='http://ss.sysu.edu.cn/InformationSystem/', target='_blank') Software School in SYSU
