--- a/src/less/includes/global.less
+++ b/src/less/includes/global.less
@@ -12,6 +12,11 @@ li {
   list-style: none;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 body {
   font-size: @font-size-base;
   font-family: @font-family-sans;
