--- a/src/less/components/aside.less
+++ b/src/less/components/aside.less
@@ -21,7 +21,7 @@ aside {
 }
 
 .author-info {
-  margin-top: 50px;
+  margin-top: 25px;
 
   h2 {
     margin-bottom: 10px;
@@ -30,7 +30,7 @@ aside {
 
 .contact {
   position: absolute;
-  bottom: 50px;
+  bottom: 25px;
 
   hr {
     margin: 10px 0;
@@ -50,5 +50,5 @@ aside {
 .set-li-icon(phone, @fa-var-phone, white);
 .set-li-icon(website, @fa-var-link, white);
 .set-li-icon(degree, @fa-var-graduation-cap, white);
-.set-li-icon(github, @fa-var-github, white);
+.set-li-icon(github, @fa-var-github-alt, white);
 .set-li-icon(weibo, @fa-var-weibo, white);
