--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -22,7 +22,10 @@
 
 
 //== Aside
-@aside-width: 250px;
+@aside-width: 25%;
 
-@aside-padding: 50px 15px 50px 15px;
+@aside-padding: 25px 15px 25px 15px;
 @aside-avatar-size: 100px;
+
+//== Main
+@main-width: 75%;
