--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -18,8 +18,21 @@ block author
 block content
   main
     header
-
+      h2 Welcome to Shawn's website!
     article
+      section.short
+        p.
+          I'm Shawn, and I'm learning how to be an excellent front-end engineer.
+        p.
+          Here are some useful links that I've put my energy in, which may help you to know me better!
+      section.experience
+        ul
+          li.resume
+            a(href='#', target='_blank') My resume
+          li.fep
+            a(href='#', target='_blank') e_help
+          li.diary
+            a(href='#', target='_blank') diary
 
 //- block footer
 //-   p Designed and Developed by Shawn Dai
