--- a/src/jade/layout/layout.jade
+++ b/src/jade/layout/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Shawn的导航小站
+    title Shawn's Navigation
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     block style
@@ -10,6 +10,4 @@ html
       block author
     .container
       block content
-    footer
-      block footer
     block scripts
