--- a/src/jade/mixins/mixin.jade
+++ b/src/jade/mixins/mixin.jade
@@ -14,3 +14,24 @@ mixin contact
       a(href='http://daixuan.me', target='_blank') http://daixuan.me
     li.degree
       a(href='http://ss.sysu.edu.cn/InformationSystem/', target='_blank') Software School in SYSU
+
+mixin experience
+  dl
+    dt.resume
+      h5
+        a(href='#', target='_blank') My resume
+    dd
+      p.
+        A resume template
+    dt.fep
+      h5
+        a(href='#', target='_blank') e_help
+    dd
+      p.
+        A website
+    dt.diary
+      h5
+        a(href='#', target='_blank') diary
+    dd
+      p.
+        Daily records
