--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -22,7 +22,7 @@ block content
         header
           h3 Welcome to Shawn's website!
         p.
-          I'm Shawn, a junior at Software School, Sun Yat-Sen University. I'm learning how to be an excellent front-end engineer now.
+          I'm Shawn, a junior who major in Software Engineering at Software School in Sun Yat-Sen University. I'm learning how to be an excellent front-end engineer now.
       section.experience
         header
           h3 Experience
