--- a/src/jade/mixins/mixin.jade
+++ b/src/jade/mixins/mixin.jade
@@ -22,16 +22,23 @@ mixin experience
         a(href='#', target='_blank') My resume
     dd
       p.
-        A resume template
+        A resume template which read data from JSON file and generate static page with Jade and Less.
     dt.fep
       h5
-        a(href='#', target='_blank') e_help
+        a(href='#', target='_blank') E_help
     dd
       p.
-        A website
+        A project which hopes to make help easier.
     dt.diary
       h5
-        a(href='#', target='_blank') diary
+        a(href='#', target='_blank') Diary Site
     dd
       p.
-        Daily records
+        Automatically read data from submodule and generate page.
+    dt.blog
+      h5
+        a(href='#', target='_blank') My blog
+    dd
+      p.
+        My technical blog for summary or something important.
+
