--- a/src/less/components/content.less
+++ b/src/less/components/content.less
@@ -1,9 +1,8 @@
 .container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: @aside-width;
-  width: @main-width;
-  height: 100%;
+  width: auto;
   padding: @aside-padding;
 
   section {
@@ -40,3 +39,4 @@ dd p {
 .set-li-icon(resume, @fa-var-book, inherit);
 .set-li-icon(fep, @fa-var-link, inherit);
 .set-li-icon(diary, @fa-var-calendar, inherit);
+.set-li-icon(blog, @fa-var-pencil, inherit);
