--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -20,12 +20,16 @@
 @fa-css-prefix:       fa;
 @fa-version:          "4.3.0";
 
-
 //== Aside
 @aside-width: 245px;
 
-@aside-padding: 25px 15px 25px 15px;
 @aside-avatar-size: 100px;
 
 //== Main
-@main-width: 75%;
+
+//== Common
+@default-padding: 25px 15px 25px 15px;
+
+//== Media queries breakpoints
+@screen-sm: 768px;
+@screen-sm-min: @screen-sm;
