--- a/src/less/includes/color.less
+++ b/src/less/includes/color.less
@@ -1,8 +1,8 @@
 //== Macaron Color System  http://blog.sina.com.cn/s/blog_5c3b139d0101dkhm.html
 
 //= red
-@marcaron-strawberry: #f16d7a;
-@marcaron-rose: #e27386;
+@macaron-strawberry: #f16d7a;
+@macaron-rose: #e27386;
 @macaron-rose-pink: #f55066;
 @macaron-anperiaru: #ef5464;
 @macaron-nougat: #ed9678;
