--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -25,10 +25,9 @@
 
 @aside-avatar-size: 100px;
 
-//== Main
-
 //== Common
 @default-padding: 25px 15px 25px 15px;
+@default-margin: 25px;
 
 //== Media queries breakpoints
 @screen-sm: 768px;
