--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -30,7 +30,7 @@ block content
         p.
           Here are some useful links that I am working on or I've worked on, which may help you to know me better!
         +experience
-      section.copyright
+      footer.copyright
         header
           h3 Copyright
         address Designed and Developed by Shawn Dai - 
