--- a/src/less/components/aside.less
+++ b/src/less/components/aside.less
@@ -5,6 +5,7 @@ aside {
 
   @media (max-width: @screen-sm-min) {
     left: -@aside-width;
+    .transition(left);
   }
 
   width: @aside-width;
@@ -21,6 +22,7 @@ aside {
 aside.mobile {
   @media (max-width: @screen-sm-min) {
     left: 0;
+    .transition(left);
   }
 }
 
@@ -36,7 +38,7 @@ aside.mobile {
 }
 
 .author-info {
-  margin-top: 25px;
+  margin-top: @default-margin;
 
   h2 {
     margin-bottom: 10px;
@@ -45,7 +47,7 @@ aside.mobile {
 
 .contact {
   position: absolute;
-  bottom: 25px;
+  bottom: @default-margin;
 
   hr {
     margin: 10px 0;
@@ -55,11 +57,13 @@ aside.mobile {
     margin: 5px 0;
   }
 
-  a:visited {
-    color: inherit;
-  }
-  a:hover, a:focus, a:active {
-    color: @bg-color;
+  a {
+    .transition(color);
+
+    &:hover, &:focus, &:active {
+      color: @bg-color;
+      .transition(color);
+    }
   }
 }
 
