--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -20,10 +20,10 @@
 @fa-css-prefix:       fa;
 @fa-version:          "4.3.0";
 
-//== Aside
+//== Aside / Content
 @aside-width: 245px;
-
 @aside-avatar-size: 100px;
+@mobile-click-size: 40px;
 
 //== Common
 @default-padding: 25px 15px 25px 15px;
