--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -32,3 +32,9 @@
 //== Media queries breakpoints
 @screen-sm: 768px;
 @screen-sm-min: @screen-sm;
+
+@screen-sm-height: 440px;
+@screen-sm-height-min: @screen-sm-height;
+
+@screen-xs-height: 280px;
+@screen-xs-height-min: @screen-xs-height;
