remove vh, add ga

--- a/src/jade/layout/layout.jade
+++ b/src/jade/layout/layout.jade
@@ -1,3 +1,5 @@
+include ../mixins/ga.jade
+
 doctype html
 html
   head
@@ -5,6 +7,7 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     block style
+    +ga
   body
     aside.serif
       block author
