--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -31,7 +31,8 @@
 
 //== Media queries breakpoints
 @screen-sm: 768px;
-@screen-sm-min: @screen-sm;
+@screen-sm-min: (@screen-sm + 1);
+@screen-sm-max: @screen-sm;
 
 @screen-sm-height: 440px;
 @screen-sm-height-min: @screen-sm-height;
