load js with AMD

--- a/src/less/components/content.less
+++ b/src/less/components/content.less
@@ -11,11 +11,11 @@
 
   top: 0;
   padding: @default-padding;
-  .transition(opacity);
+  .transition(all);
 
   &.mobile {
     opacity: 0.5;
-    .transition(opacity);
+    .transition(all);
   }
 }
 
