--- a/src/jade/mixins/mixin.jade
+++ b/src/jade/mixins/mixin.jade
@@ -17,24 +17,24 @@ mixin contact
 
 mixin experience
   dl
+    dt.diary
+      h5
+        a(href='/diary/', target='_blank') Shawn's Diary
+    dd
+      p.
+        Diary that records thing that I'm working on or need to pay attention to.
+    dt.fep
+      h5
+        a(href='/e_help/', target='_blank') E_help
+    dd
+      p.
+        A project which hopes to make help easier.
     dt.resume
       h5
         a(href='#', target='_blank') My resume
     dd
       p.
         A resume template which read data from JSON file and generate static page with Jade and Less.
-    dt.fep
-      h5
-        a(href='#', target='_blank') E_help
-    dd
-      p.
-        A project which hopes to make help easier.
-    dt.diary
-      h5
-        a(href='#', target='_blank') Diary Site
-    dd
-      p.
-        Automatically read data from submodule and generate page.
     dt.blog
       h5
         a(href='#', target='_blank') My blog
