--- a/src/jade/layout/layout.jade
+++ b/src/jade/layout/layout.jade
@@ -9,8 +9,8 @@ html
     block style
     +ga
   body
-    aside.serif
+    aside
       block author
-    .container.sans-serif
+    .container
       block content
     block scripts
