--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -1,6 +1,6 @@
 //== Font
-@font-family-sans: 'Open Sans', Arial, "Helvetica Neue",'Microsoft Yahei', sans-serif;
-@font-family-serif: 'Georgia', Times, SimSun, STSong, serif;
+@font-family-sans: 'Trebuchet MS', 'Helvetica Neue', Helvetica, Arial, sans-serif;;
+@font-family-serif: 'PT Serif', Georgia, Cambria, 'Times New Roman', Times, serif;
 //= Font-Size
 @font-size-base: 16px;
 @font-size-h1: 2.25rem;
