--- a/src/less/components/content.less
+++ b/src/less/components/content.less
@@ -11,6 +11,8 @@
 
   top: 0;
   padding: @default-padding;
+  line-height: 1.667;
+  font-family: @font-family-serif;
   .transition(all);
 
   &.mobile {
@@ -41,6 +43,7 @@ header {
   padding-bottom: .75rem;
   margin-bottom: 0.75rem;
   border-bottom: 1px solid #ccc;
+  font-family: @font-family-sans;
 }
 
 dl {
@@ -53,6 +56,7 @@ section dd {
 
 dt h5 {
   display: inline-block;
+  font-family: @font-family-sans;
 }
 
 dd p {
