--- a/src/less/includes/global.less
+++ b/src/less/includes/global.less
@@ -19,7 +19,7 @@ a {
 
 body {
   font-size: @font-size-base;
-  font-family: @font-family-sans;
+  font-family: @font-family-serif;
   background-color: @bg-color;
   color: @text-color;
 }
