Replace requirejs with browserify

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -39,4 +39,4 @@ block content
           Copyright 2015 © daixuan.me. All Rights Reserved.
 
 block scripts
-  script(src='./js/lib/require.js', data-main="js/main", defer, async="true", type='text/javascript')
+  script(src='./js/bundle.js' type='text/javascript')
