--- a/src/jade/mixins/mixin.jade
+++ b/src/jade/mixins/mixin.jade
@@ -17,6 +17,12 @@ mixin contact
 
 mixin experience
   dl
+    dt.game-2048
+      h5
+        a(href='/2048/', target='_blank') Shawn's 2048
+      dd
+        p.
+          An reimplementation of 2048.
     dt.diary
       h5
         a(href='/diary/', target='_blank') Shawn's Diary
