--- a/src/less/components/content.less
+++ b/src/less/components/content.less
@@ -63,15 +63,15 @@ dd p {
   padding: 0 5px;
 }
 
-.copyright {
+#copyright {
   margin-top: @default-margin;
 }
 
-.copyright a {
+#copyright a {
   text-decoration: underline;
 }
 
-.short h3 {
+#welcome h3 {
   margin-right: @mobile-click-size;
 }
 
@@ -102,6 +102,7 @@ dd p {
   transform: rotate(-180deg);
 }
 
+.set-li-icon(game-2048, @fa-var-gamepad, inherit);
 .set-li-icon(resume, @fa-var-book, inherit);
 .set-li-icon(fep, @fa-var-link, inherit);
 .set-li-icon(diary, @fa-var-calendar, inherit);
